2008-07-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/debug-manager/breakpoints.c (on_editor_saved):
	* plugins/symbol-browser/plugin.c (on_editor_saved):
	* plugins/symbol-db/plugin.c (on_editor_saved):
	Adapted to change in the "saved" signal of IAnjutaFile

	* plugins/editor/text_editor.c (text_editor_save_file):
	Fixed #541313 – Crash on saving file
	
	* plugins/sourceview/sourceview.c (on_save_finish):
	Emit "saved" signal

2008-07-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/sourceview/anjuta-editor-sourceview.glade:
	Remove "Monitor VFS" preference - it is always enabled

2008-07-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/action-callbacks.c
	(on_close_file_activate):
	* plugins/document-manager/anjuta-docman.c:
	* plugins/project-manager/plugin.c (value_added_current_editor):
	* plugins/symbol-browser/plugin.c (value_added_current_editor):
	Fixed GFile* related stuff
	
	* plugins/file-manager/file-model.c (file_model_update_file):
	Do not unref GIcon* as it is owned by GFileInfo*
	
	* plugins/sourceview/anjuta-document-loader.c:
	* plugins/sourceview/anjuta-document-loader.h:
	* plugins/sourceview/anjuta-document-saver.c:
	* plugins/sourceview/anjuta-document-saver.h:
	* plugins/sourceview/anjuta-document.c:
	* plugins/sourceview/anjuta-document.h:
	* plugins/sourceview/anjuta-utils.c:
	* plugins/sourceview/anjuta-utils.h:
	Deleted old (gedit) gnome-vfs stuff.
	
	* plugins/sourceview/sourceview.io.c
	* plugins/sourceview/sourceview.io.h:
	New helper class that takes care of file saving/loading
	and is much smaller than the gnome-vfs stuff as many things are
	handled by gio now.
	
	* plugins/sourceview/Makefile.am:
	* plugins/sourceview/anjuta-view.c (anjuta_view_new),
	(anjuta_view_cut_clipboard), (anjuta_view_paste_clipboard),
	(anjuta_view_delete_selection), (anjuta_view_expose):
	* plugins/sourceview/anjuta-view.h:
	* plugins/sourceview/sourceview-private.h:
	* plugins/sourceview/sourceview.c (sourceview_create_markers),